tests/snapshots/output__local_backup_service.snap
---
source: tests/output.rs
expression: "read_to_string(normal_dir.path().join(\"restic-myrepo-backup.service\"))?"
---
# generated by restic-generator
[Unit]
Description=backup / to /my/restic/repo
SourcePath=example-config.toml
ConditionPathExists=/
ConditionPathExists=/my/restic/repo

[Service]
Environment=RESTIC_REPOSITORY="/my/restic/repo"
Environment=RESTIC_PASSWORD_COMMAND="pass restic/myrepo"
Type=oneshot
ExecStartPre=restic unlock
ExecStart=restic backup --host="laptop" --exclude="/home/*/.cache" --exclude="*~" /
SuccessExitStatus=3
Nice=10
IOSchedulingClass=idle

