tests/snapshots/output__s3_backup_service.snap
---
source: tests/output.rs
expression: "read_to_string(normal_dir.path().join(\"restic-s3bucket-backup.service\"))?"
---
# generated by restic-generator
[Unit]
Description=backup / to s3:storage.example.com/bucket
SourcePath=example-config.toml
ConditionPathExists=/

[Service]
Environment=RESTIC_REPOSITORY="s3:storage.example.com/bucket"
Environment=AWS_ACCESS_KEY="ABCDEF"
Environment=AWS_SECRET_ACCESS_KEY="s3cr3ts"
Type=oneshot
ExecStart=restic backup --host="laptop" --exclude="/home/*/.cache" --exclude="*~" /
Nice=10
IOSchedulingClass=idle

